--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href='../odin-recipes/recipes/lazy_longanisa.html'>Lazy Longanisa</a>
     </body>
 </html>
