Add link back to home page
I added the link to circle back to index.html. I was able to check and
verify I was able to navigate between both webpages before updating
the Odin-Recipes repository.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Lazy Longanisa</title>
+        <a href='../index.html'>Home</a>
     </head>
     <body>
         <h1>Lazy Longanisa</h1>
