Add img src to lazy lazy longanisa webpage
I added the lazy_longanisa.jpg file to the body of the webpage. It has
been successfully added and verified by loading the test page.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Lazy Longanisa</h1>
+        <img src='lazy_longanisa.jpg'>
         <p>Test paragraph for git commit</p>
     </body>
 </html>
