Add description to dish
Added a brief summary of how this recipe can be preared along with the
variations of cooking this delicious dish.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -8,6 +8,20 @@
     <body>
         <h1>Lazy Longanisa</h1>
         <img src='lazy_longanisa.jpg'>
-        <p>Test paragraph for git commit</p>
+        <h6></h6>
+        <p>This is a varation of a popular Filipino breakfast referred 
+            to as &ldquo;silog&rdquo;. There are other varieties that 
+            vary the meat and/or pork used with the dish. Typically, 
+            garlic fried rice and over easy eggs accompany the choice 
+            of meat. Common meats can be (but are not limited to) tapa,
+             longanisa, bangus, bacon, and spam.</p>
+        <p>The choice of rice and style of eggs can also vary 
+            depending on individual preference. Freshly cooked rice can
+             be prepared, or a variation of fried rice can be used 
+            instead. Some may also prefer to have their eggs more 
+            thoroughly cooked.</p>
+        <p>Regardless, there is no wrong way to prepare a Filipino-
+            favorite dish. Its flexibility is what makes it popular 
+            among Filipinos.</p>
     </body>
 </html>
