Edit header of recipe
I forgot to add the header of the summary header. Header added is Header 1.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Lazy Longanisa</h1>
         <img src='lazy_longanisa.jpg'>
-        <h6></h6>
+        <h2>Recipe Description</h2>
         <p>This is a varation of a popular Filipino breakfast referred 
             to as &ldquo;silog&rdquo;. There are other varieties that 
             vary the meat and/or pork used with the dish. Typically, 
