--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -23,5 +23,15 @@
         <p>Regardless, there is no wrong way to prepare a Filipino-
             favorite dish. Its flexibility is what makes it popular 
             among Filipinos.</p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 pound smoked kielbasa sausage, 
+                    cut into thick slices</l1>
+                <li>1/2 cup brown sugar</li>
+                <li>4 teaspoons white vinegar</li>
+                <li>1 tablespoon soy sauce</li>
+                <li>1/2 cup water</li>
+                <li>1 tablespoon vegetable oil</li>
+            </ul>
     </body>
 </html>
