Add directions to lazy longanisa webpage
Directions added.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -33,5 +33,17 @@
                 <li>1/2 cup water</li>
                 <li>1 tablespoon vegetable oil</li>
             </ul>
+            <h3>Directions</h3>
+            <ol>
+                <li>Combine sausage, brown sugar, vinegar, and soy 
+                    in a large resealable plastic bag; toss to coat 
+                    sausage with marinade. Squeeze out excess air and 
+                    seal the bag. Marinate in the refrigerater 2 hours 
+                    to over night.</li>
+                <li>Pour sausage mixture into a large skillet over 
+                    over medium-high heat. Add water and vegetable oil;
+                     cook and stir until liquid is reduced and sausage 
+                     is browned, about 15 minutes.</li>
+            </ol>
     </body>
 </html>
