--- a/recipes/egg_in_a_whole.html
+++ b/recipes/egg_in_a_whole.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Egg in a Whole</title>
+        <ul>
+            <li><a href='../index.html'>Home</a></li>
+            <li><a href='lazy_longanisa.html'></a></li>
+        </ul>
+        
     </head>
     <body>
 
