--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href='../odin-recipes/recipes/lazy_longanisa.html'>Lazy Longanisa</a>
+        <ul>
+            <li><a href='../odin-recipes/recipes/egg_in_a_whole.html'>Egg in a Whole</a></li>
+            <li><a href='../odin-recipes/recipes/lazy_longanisa.html'>Lazy Longanisa</a></li>
+        </ul>
     </body>
 </html>
