--- a/recipes/egg_in_a_whole.html
+++ b/recipes/egg_in_a_whole.html
@@ -5,11 +5,14 @@
         <title>Egg in a Whole</title>
         <ul>
             <li><a href='../index.html'>Home</a></li>
-            <li><a href='lazy_longanisa.html'></a></li>
+            <li><a href='lazy_longanisa.html'>Lazy Longanisa</a></li>
         </ul>
         
     </head>
     <body>
-
+        <h1>Egg in a Whole</h1>
+        <h2>Recipe Description</h2>
+        <h3>Ingredients</h3>
+        <h3>Directions</h3>
     </body>
 </html>
