--- a/recipes/egg_in_a_whole.html
+++ b/recipes/egg_in_a_whole.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <h1>Egg in a Whole</h1>
+        <img src='egg_in_a_whole.jpg'>
         <h2>Recipe Description</h2>
         <h3>Ingredients</h3>
         <h3>Directions</h3>
