Add description and ingredients
Egg in a Whole description and ingredients added.

--- a/recipes/egg_in_a_whole.html
+++ b/recipes/egg_in_a_whole.html
@@ -13,7 +13,16 @@
         <h1>Egg in a Whole</h1>
         <img src='egg_in_a_whole.jpg'>
         <h2>Recipe Description</h2>
+        <p>This delicious breakfast is simple yet flavorful. What I 
+        love is the variety available to me regarding how to cook the 
+        egg.</p>
         <h3>Ingredients</h3>
+        <ul>
+            <li>1 1/2 teaspoons bacon grease</li>
+            <li>1 slice bread</li>
+            <li>1 egg</li>
+            <li>salt and ground back pepper to taste</li>
+        </ul>
         <h3>Directions</h3>
     </body>
 </html>
