--- a/recipes/egg_in_a_whole.html
+++ b/recipes/egg_in_a_whole.html
@@ -24,5 +24,18 @@
             <li>salt and ground back pepper to taste</li>
         </ul>
         <h3>Directions</h3>
+        <ol>
+            <li>Melt bacon grease in a nonstick pan over low heat.</li>
+            <li>Cut a 2-inch hole in the center of bread slice; place 
+            in the hot skillet and cook until lightly toasted, about 2 
+            minutes. Flip bread and crack egg into the hole; season 
+            with salt and pepper. Continue to cook until egg is cooked 
+            and mostly firm; flip again and cook 1 minute more. Serve 
+            immediately.</li>
+        </ol>
+        <h3>Note</h3>
+        <p>I prefer my eggs over easy or sunny side up. I personally 
+        would not like to cook the egg as thorough as these 
+        instructions.</p>
     </body>
 </html>
