Add text to title attribute of index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Recipes Project</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
