--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href='../odin-recipes/recipes/egg_in_a_whole.html'>Egg in a Whole</a></li>
+            <li><a href='../odin-recipes/recipes/bacon_okonomiyaki.html'>Bacon Okonomiyaki</a></li>
+            <li><a href='../odin-recipes/recipes/egg_in_a_hole.html'>Egg in a Whole</a></li>
             <li><a href='../odin-recipes/recipes/lazy_longanisa.html'>Lazy Longanisa</a></li>
         </ul>
     </body>
