Add bacon okonomiyaki webpage
Added webpage link to lazy longanisa html page.

--- a/recipes/lazy_longanisa.html
+++ b/recipes/lazy_longanisa.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Lazy Longanisa</title>
-        <a href='../index.html'>Home</a>
+        <ul>
+            <li><a href='../index.html'>Home</a></li>
+            <li><a href='egg_in_a_hole.html'>Egg in a Hole</a></li>
+            <li><a href='bacon_okonomiyaki.html'></a>Bacon Okonomiyaki</li>
+        </ul>
     </head>
     <body>
         <h1>Lazy Longanisa</h1>
