Complete adding webpages

--- a/recipes/egg_in_a_hole.html
+++ b/recipes/egg_in_a_hole.html
@@ -5,6 +5,7 @@
         <title>Egg in a Whole</title>
         <ul>
             <li><a href='../index.html'>Home</a></li>
+            <li><a href='bacon_okonomiyaki.html'>Bacon Okonomiyaki</a></li>
             <li><a href='lazy_longanisa.html'>Lazy Longanisa</a></li>
         </ul>
         
