Complete bacon bacon_okonomiyaki webpage
All ingredients and directions added.

--- a/recipes/bacon_okonomiyaki.html
+++ b/recipes/bacon_okonomiyaki.html
@@ -4,9 +4,49 @@
     <title>Bacon Okonomiyaki</title>
     <ul>
         <li><a href='../index.html'>Home</a></li>
-        <li><a href='egg_in_a_whole.html'>Egg in a Whole</a></li>
+        <li><a href='egg_in_a_hole.html'>Egg in a Whole</a></li>
         <li><a href='lazy_longanisa.html'>Lazy Longanisa</a></li>
     </ul>
 </head>
-<body></body>
+<body>
+    <h1>Bacon Okonomiyaki</h1>
+    <img src='bacon_okonomiyaki.jpg'>
+    <h2>Recipe Description</h2>
+    <p>I have always enjoyed Okonomiyaki and was pleasantly surprised 
+    when I found this recipes when deciding on another webpage. It 
+    brings me joy to be able to make a webpage about this dish!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 eggs</li>
+        <li>1/2 cup water</li>
+        <li>1/2 cup all-purpose flour</li>
+        <li>2 teaspoons soy sauce</li>
+        <li>1 teaspoon baking powder</li>
+        <li>1 teaspoon salt</li>
+        <li>3 tablespoons vegetable oil</li>
+        <li>1 onion, diced</li>
+        <li>2 cups shredded cabbage</li>
+        <li>1 (8 ounce) package dried soba noodles</li>
+        <li>1 (8 ounce) package bacon, chopped</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Whisk eggs, water, flour, soy sauce, baking powder, and 
+        salt together in a bowl; set batter aside.</li>
+        <li>Heat oil in a saute pan over medium heat. Add onion; cook 
+        until soft and translucent, about 5 minutes. Stir onion into
+         batter. Add cabbage to the same pan; cook until slightly 
+        wilted, 5 to 7 minutes. Stir cabbage into batter.</li>
+        <li>Fill a large pot with water and bring to a boil. Cook soba
+         noodles in boiling water, stirring occasionally, until tender 
+        yet firm to the bite, 5 to 7 minutes. Drain and cut noodles 
+        into shorter pieces; stir into batter.</li>
+        <li>Cook 1/4 cup bacon in a skillet over medium-high heat 
+        until starting to crip, 2 to 3 minutes; arrange in a small 
+        circle in middle of the skillet. Add 1 cup batter to the 
+        skillet on top bacon; cook until brown and crispy, flipping 
+        pancake halfway and pressing down with a spatula, about 5 
+        minutes per side. Repeat with remaining bacon and batter.</li>
+    </ol>
+</body>
 </html>
